switch from springmockk to mockito-kotlin, fix buddy incompatibility with jdk21, separate surefire tests with failsafe tests, add active profiles, update maven-surefire-plugin version