@@ -57,11 +57,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>${spring-boot.version}</version>
             <scope>test</scope>
-            <exclusions>
-                <!--exclusion>
+            <!--exclusions>
+                <exclusion>
                     <groupId>junit</groupId>
                     <artifactId>junit</artifactId>
-                </exclusion-->
+                </exclusion>
                 <exclusion>
                     <groupId>org.assertj</groupId>
                     <artifactId>assertj-core</artifactId>
@@ -70,7 +70,7 @@
                     <groupId>org.mockito</groupId>
                     <artifactId>mockito-core</artifactId>
                 </exclusion>
-            </exclusions>
+            </exclusions-->
         </dependency>
         <dependency>
           <groupId>org.junit.jupiter</groupId>
@@ -85,20 +85,9 @@
             <scope>test</scope>
         </dependency-->
         <dependency>
-          <groupId>com.ninja-squad</groupId>
-          <artifactId>springmockk</artifactId>
-          <version>4.0.2</version>
-          <scope>test</scope>
-          <!--exclusions>
-            <exclusion>
-                <groupId>net.bytebuddy</groupId>
-                <artifactId>byte-buddy</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>net.bytebuddy</groupId>
-                <artifactId>byte-buddy-agent</artifactId>
-            </exclusion>
-          </exclusions-->          
+            <groupId>org.mockito.kotlin</groupId>
+            <artifactId>mockito-kotlin</artifactId>
+            <version>5.2.1</version>
         </dependency>
         <!-- Place this before reload4j so that spring boot will pick apache log4j -->
         <dependency>
@@ -263,29 +252,57 @@
                         <goals>
                             <goal>testCompile</goal>
                         </goals>
+                        <!--configuration>
+                            <compilerArgs>
+                                <arg>-verbose</arg>
+                                <arg>-Xlint:all,-options,-path</arg>
+                                <arg>-Dnet.bytebuddy.experimental</arg>                                
+                            </compilerArgs>                            
+                        </configuration-->
                     </execution>
                 </executions>
             </plugin>
-            <!--plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <includes>
                         <include>SpringContextTest</include>
-                        <include>**/*UnitTest</include>
+                        <include>**/*Test</include>
                     </includes>
                     <excludes>
-                        <exclude>**/*IntegrationTest</exclude>
-                        <exclude>**/*IntTest</exclude>
-                        <exclude>**/*LongRunningUnitTest</exclude>
-                        <exclude>**/*ManualTest</exclude>
-                        <exclude>**/*JdbcTest</exclude>
-                        <exclude>**/*LiveTest</exclude>
+                        <exclude>**/*IntegrationTests</exclude>
                     </excludes>
+                    <!-- If you don't configure system property as such, you'll need to pass it in CLI like mvn -D...=...-->
+                    <systemPropertyVariables>
+                        <net.bytebuddy.experimental>true</net.bytebuddy.experimental>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>	            
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <includes>
+                        <include>**/*IntegrationTests</include>
+                    </includes>
+                    <excludes>
+                        <exclude>**/*Test</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                </executions>                
+            </plugin>
+            <!--plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>${exec-maven-plugin.version}</version>
@@ -320,7 +337,7 @@
         <junit.version>5.10.1</junit.version>
         <mockito.version>3.1.0</mockito.version>
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>    
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>    
+        <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>    
         <!--exec-maven-plugin.version>1.6.0</exec-maven-plugin.version-->
         <!-- incremental compile is experimental-->
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
@@ -330,4 +347,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
+    <profiles>
+      <profile>
+        <id>dev</id>
+        <activation>
+          <activeByDefault>true</activeByDefault>
+        </activation>
+      </profile>
+    </profiles>    
 </project>
